--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<!-- Homepage -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Rhys Coin Blackjack</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <h1>Welcome to Rhys Coin Blackjack</h1>
+  <p>Select a game from the menu.</p>
+</body>
+</html>
